# secretary

./: .coverage  .env.example  .gitignore  .omcscientistopenclaw_news.html  .omcscientistopenclaw_overview.html  CLAUDE.md  Cclaudesecretaryoutputresearchopenclaw_project_overview.md  IMPLEMENTATION_SUMMARY.md  README.md  SKILL.md  demo_actions.py  pyproject.toml  requirements.txt
.claude/agents/: analyst.md  architect-low.md  architect-medium.md  architect.md  catalog-engineer.md  claude-expert.md  code-reviewer.md  critic.md  designer-high.md  designer.md  executor-high.md  executor-low.md  executor.md  explore-high.md  explore-medium.md  explore.md  frontend-dev.md  gap-detector.md  planner.md  qa-tester-high.md  qa-tester.md  quality-gate.md  scientist-high.md  scientist-low.md  scientist.md  (+3 more)
config/: projects.json
data/: daily_report_2026-03-19.md  daily_report_2026-03-20.md  daily_report_2026-03-23.md  daily_report_2026-03-24.md  daily_report_2026-03-25.md  daily_report_2026-03-26.md  daily_report_2026-03-27.md  daily_report_2026-03-30.md  gateway.db  intelligence.db  intelligence.db-shm  intelligence.db-wal  knowledge.db
docs/: GATEWAY_STORAGE.md  NOTIFICATION_SYSTEM.md  PHASE3_IMPLEMENTATION.md
scripts/: calendar_analyzer.py  daily_report.py  github_analyzer.py  github_private_converter.py  gmail_analyzer.py  llm_analyzer.py  morning_briefing.py  notification_analyzer.py  notification_receiver.py  poc_gmail_to_slack.py  poc_slack_chatbot.py  poc_slack_ollama.py  setup_morning_scheduler.ps1  slack_analyzer.py  test_notification_system.py
tests/: test_action_dispatcher.py  test_actions.py  test_claude_client.py  test_cli.py  test_drafts_send.py  test_gateway_storage.py  test_github_private_converter.py  test_rate_limiter.py  test_retry.py
(+331 files in other folders)
